Fix overflow issue

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -17,3 +17,7 @@ a {
 .figure {
   max-height: 300px;
 }
+
+p {
+  overflow-x: auto;
+}
